made modal and changed to backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/backend": "^1.13.5",
     "@clerk/clerk-sdk-node": "^5.0.45",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "svix": "^1.36.0"
   },
